Code with new dates courtesy of Emily - 61.11% accuracy

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 tweetid_userid_keyword_sentiments_emotions_United States.csv
 .tweetid_userid_keyword_sentiments_emotions_United States.csv.icloud
 data_pickle.pkl
+data_pickle_2.pkl
